@@ -2,7 +2,7 @@
 bin_PROGRAMS = dfsch-repl
 nobase_include_HEADERS = dfsch/lib/threads.h \
 	dfsch/lib/unix.h \
-	dfsch/lib/load.h \
+	dfsch/lib/regex.h \
 	dfsch/strings.h \
 	dfsch/parse.h \
 	dfsch/promise.h \
@@ -17,8 +17,9 @@ nobase_include_HEADERS = dfsch/lib/threads.h \
 	dfsch/format.h\
 	dfsch/ports.h
 
-lib_LTLIBRARIES     = libdfsch.la \
-	libdfsch_load.la libdfsch_threads.la libdfsch_regex.la libdfsch_unix.la
+lib_LTLIBRARIES     = libdfsch.la
+
+dfschlibexec_LTLIBRARIES = threads.la regex.la unix.la
 
 man_MANS = doc/dfsch-repl.1
 
@@ -40,32 +41,28 @@ libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/types.h src/internal.h\
 	src/weak.c dfsch/weak.h\
 	src/pprint.c dfsch/pprint.h\
 	src/format.c dfsch/format.h\
-	src/ports.c dfsch/ports.h
+	src/ports.c dfsch/ports.h\
+	src/load.c dfsch/load.h
 
 libdfsch_la_LDFLAGS = -version-info 4:0:0
 libdfsch_la_LIBADD =  -lgc -lpthread -ldl -lm
 
-libdfsch_threads_la_SOURCES = lib/threads.c dfsch/lib/threads.h
-libdfsch_threads_la_LDFLAGS = -version-info 1:0:0
-libdfsch_threads_la_LIBADD =  libdfsch.la -lpthread
+threads_la_SOURCES = lib/threads.c dfsch/lib/threads.h
+threads_la_LDFLAGS = -version-info 1:0:0  -module
+threads_la_LIBADD =  libdfsch.la -lpthread
 
-libdfsch_load_la_SOURCES = lib/load.c dfsch/lib/load.h
-libdfsch_load_la_LDFLAGS = -version-info 1:0:0
-libdfsch_load_la_LIBADD =  libdfsch.la
+regex_la_SOURCES = lib/regex.c dfsch/lib/regex.h
+regex_la_LDFLAGS = -version-info 1:0:0 -module
+regex_la_LIBADD =  libdfsch.la
 
-libdfsch_regex_la_SOURCES = lib/regex.c dfsch/lib/regex.h
-libdfsch_regex_la_LDFLAGS = -version-info 1:0:0
-libdfsch_regex_la_LIBADD =  libdfsch.la
-
-libdfsch_unix_la_SOURCES = lib/unix.c dfsch/lib/unix.h
-libdfsch_unix_la_LDFLAGS = -version-info 1:0:0
-libdfsch_unix_la_LIBADD =  libdfsch.la
+unix_la_SOURCES = lib/unix.c dfsch/lib/unix.h
+unix_la_LDFLAGS = -version-info 1:0:0 -module
+unix_la_LIBADD =  libdfsch.la
 
 
 dfsch_repl_SOURCES = src/repl.c
 dfsch_repl_LDADD = libdfsch.la \
-	libdfsch_load.la libdfsch_threads.la libdfsch_regex.la \
-	libdfsch_unix.la \
+	threads.la regex.la unix.la \
 	@READLINE_LIBS@		
 
 
