@@ -1,5 +1,8 @@
 2007-12-01  Ales Hakl  <ales at hakl dot net>
 
+	* Makefile.am (nobase_include_HEADERS): integrate module loader
+	into dfsch, install modules into $libdir/dfsch
+
 	* lib/load.c (dfsch_load_register): predefine library directories
 
 2007-11-28  Ales Hakl  <ales at hakl dot net>
